src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  font-family: sans-serif;
}

input[type='date']::-webkit-inner-spin-button,
input[type='date']::-webkit-calendar-picker-indicator {
  display: none;
  -webkit-appearance: none;
}

div.inactive-toggle-periodicity {
  border-radius: 10px;
  font-weight: 700;
  font-size: 15px;
  line-height: 20px;
  display: flex;
  align-items: center;
  text-align: center;
  letter-spacing: 0.02em;
  color: #9babde;
  cursor: pointer;
  padding: 0.7rem 1.4rem !important;
}
div.active-toggle-periodicity {
  background: #4f80ff;
  box-shadow: 0px 5px 8px 3px rgba(39, 87, 237, 0.15);
  border-radius: 10px;
  font-weight: 700;
  font-size: 15px;
  line-height: 20px;
  display: flex;
  align-items: center;
  text-align: center;
  letter-spacing: 0.02em;
  color: #ffffff;
  padding: 0.7rem 1.4rem !important;
}
div.remove-height {
  height: unset !important;
  overflow: unset !important;
}

/* Add this to your global styles or CSS module */
.toggle-ios-label {
  width: 36px;
  height: 16px;
  border-radius: 999px;
  position: relative;
  display: inline-block;
  transition: background-color 0.2s;
}

.toggle-ios-checkbox {
  display: none;
}

.toggle-ios-handle {
  top: 1px;
  /* Adjust according to the size of the handle */
  left: 1px;
  /* Adjust according to the size of the handle */
  width: 10px;
  /* Adjust according to the size of the handle */
  height: 10px;
  /* Adjust according to the size of the handle */
  border-radius: 999px;
  position: absolute;
  transition: transform 0.2s;
  box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
}

.ql-editor ul { 
  padding-left: unset !important;
}

.ql-editor ul > li {
  padding-left: 0.5em !important;
}

/* Style the scroll container */
::-webkit-scrollbar {
  width: 5px;
  /* Width of the scrollbar */
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
  /* Color of the track */
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #2C3F58;
  /* Color of the scroll handle */
  border-radius: 6px;
  /* Rounded corners */
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #2C3F58;
  /* Color of the scroll handle on hover */
  padding-left: 1em !important;
}

.nested-decimal {
  counter-reset: section;
}

.nested-decimal > li {
  display: list-item;
  list-style-type: none;
  counter-increment: section;
}

.nested-decimal > li:before {
  content: counters(section, ".") ". ";
}

